--- a/Hello.Cpp/Hello.Cpp/Hello.Cpp.vcxproj.filters
+++ b/Hello.Cpp/Hello.Cpp/Hello.Cpp.vcxproj.filters
@@ -23,6 +23,15 @@
     <ClCompile Include="hello_cpp_smart_pointer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="hello_cpp_function_bind.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="hello_cpp_tuple_optionl_any_variant.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="hello_cpp_variadic_template.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="hello_cpp_main.h">
