--- a/Hello.Cpp/Hello.Cpp/Hello.Cpp.vcxproj
+++ b/Hello.Cpp/Hello.Cpp/Hello.Cpp.vcxproj
@@ -156,12 +156,14 @@
     <ClCompile Include="hello_cpp_function_bind.cpp" />
     <ClCompile Include="hello_cpp_lambda.cpp" />
     <ClCompile Include="hello_cpp_main.cpp" />
+    <ClCompile Include="hello_cpp_priority_queue.cpp" />
     <ClCompile Include="hello_cpp_smart_pointer.cpp" />
     <ClCompile Include="hello_cpp_tuple_optionl_any_variant.cpp" />
     <ClCompile Include="hello_cpp_variadic_template.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="hello_cpp_main.h" />
+    <ClInclude Include="hello_cpp_variadic_template.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Hello.Cpp.rc" />
