--- a/Hello.Cpp/Hello.Cpp/Hello.Cpp.vcxproj
+++ b/Hello.Cpp/Hello.Cpp/Hello.Cpp.vcxproj
@@ -155,6 +155,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="hello_cpp_align.cpp" />
     <ClCompile Include="hello_cpp_chrono.cpp" />
     <ClCompile Include="hello_cpp_bind_function.cpp" />
     <ClCompile Include="hello_cpp_lambda.cpp" />
