--- a/Hello.Cpp/Hello.Cpp/Hello.Cpp.vcxproj
+++ b/Hello.Cpp/Hello.Cpp/Hello.Cpp.vcxproj
@@ -163,6 +163,7 @@
     <ClCompile Include="hello_cpp_auto_delctype.cpp" />
     <ClCompile Include="hello_cpp_chrono.cpp" />
     <ClCompile Include="hello_cpp_bind_function.cpp" />
+    <ClCompile Include="hello_cpp_constexpr.cpp" />
     <ClCompile Include="hello_cpp_coroutine.cpp" />
     <ClCompile Include="hello_cpp_enum_class.cpp" />
     <ClCompile Include="hello_cpp_lambda.cpp" />
