蓝色的骨头。

--- a/Hello.Cpp/Hello.Cpp/Hello.Cpp.vcxproj.filters
+++ b/Hello.Cpp/Hello.Cpp/Hello.Cpp.vcxproj.filters
@@ -65,6 +65,9 @@
     <ClCompile Include="hello_cpp_constexpr.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="hello_cpp_random.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="hello_cpp_main.h">
