--- a/Hello.Cpp/Hello.Cpp/Hello.Cpp.vcxproj
+++ b/Hello.Cpp/Hello.Cpp/Hello.Cpp.vcxproj
@@ -170,6 +170,7 @@
     <ClCompile Include="hello_cpp_main.cpp" />
     <ClCompile Include="hello_cpp_noexcept_final_override.cpp" />
     <ClCompile Include="hello_cpp_priority_queue.cpp" />
+    <ClCompile Include="hello_cpp_random.cpp" />
     <ClCompile Include="hello_cpp_rvalue_reference.cpp" />
     <ClCompile Include="hello_cpp_smart_pointer.cpp" />
     <ClCompile Include="hello_cpp_thread.cpp" />
