--- a/Hello.Cpp/Hello.Cpp/Hello.Cpp.vcxproj
+++ b/Hello.Cpp/Hello.Cpp/Hello.Cpp.vcxproj
@@ -174,6 +174,7 @@
     <ClCompile Include="thread.cpp" />
     <ClCompile Include="thread_local.cpp" />
     <ClCompile Include="tuple.cpp" />
+    <ClCompile Include="type_traits.cpp" />
     <ClCompile Include="variant.cpp" />
     <ClCompile Include="variadic_template.cpp" />
     <ClCompile Include="promise_future.cpp" />
