做了一下semaphonre的测试。

--- a/Hello.Cpp/Hello.Cpp/Hello.Cpp.vcxproj.filters
+++ b/Hello.Cpp/Hello.Cpp/Hello.Cpp.vcxproj.filters
@@ -83,6 +83,9 @@
     <ClCompile Include="type_traits.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="semaphore.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
