--- a/Hello.Cpp/Hello.Cpp/Hello.Cpp.vcxproj
+++ b/Hello.Cpp/Hello.Cpp/Hello.Cpp.vcxproj
@@ -170,6 +170,7 @@
     <ClCompile Include="optional.cpp" />
     <ClCompile Include="priority_queue.cpp" />
     <ClCompile Include="rvalue_reference.cpp" />
+    <ClCompile Include="semaphore.cpp" />
     <ClCompile Include="smart_pointer.cpp" />
     <ClCompile Include="thread.cpp" />
     <ClCompile Include="thread_local.cpp" />
