--- a/Hello.Cpp/Hello.Cpp/Hello.Cpp.vcxproj.filters
+++ b/Hello.Cpp/Hello.Cpp/Hello.Cpp.vcxproj.filters
@@ -86,6 +86,9 @@
     <ClCompile Include="semaphore.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="regex.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
